# TetroWeb

./: .gitignore  README.md  pyproject.toml
.github/prompts/: commit-message-instructions.md
features/tetroweb-shared-kernel-infra-database-sqla/: pyproject.toml
features/tetroweb-shared-kernel-infra-database-sqla/src/tetroweb/shared_kernel/infra/database/sqla/: __init__.py  base.py  connection.py  mixin.py  repository.py  settings.py
features/tetroweb-shared-kernel-infra-database-sqla/src/tetroweb/shared_kernel/infra/database/sqla/container/: di.py
features/tetroweb-shared-kernel-infra-database-sqla/tests/: test_inmemory_db.py  test_inmemory_db_async.py
features/tetroweb-shared_kernel/: README.md  pyproject.toml
features/tetroweb-shared_kernel-infra-fastapi/: pyproject.toml
features/tetroweb-shared_kernel-infra-fastapi/src/tetroweb/shared_kernel/infra/fastapi/dtos/request/: __init__.py  image.py  pageable.py
features/tetroweb-shared_kernel-infra-fastapi/src/tetroweb/shared_kernel/infra/fastapi/dtos/response/: __init__.py  base.py  pageable.py
features/tetroweb-shared_kernel-infra-fastapi/src/tetroweb/shared_kernel/infra/fastapi/exception_handlers/: base.py
features/tetroweb-shared_kernel-infra-fastapi/src/tetroweb/shared_kernel/infra/fastapi/middlewares/: correlation_id.py  model.py  session.py
features/tetroweb-shared_kernel-infra-fastapi/src/tetroweb/shared_kernel/infra/fastapi/utils/: responses.py  router.py
features/tetroweb-shared_kernel-infra-fastapi/tests/: test_integration_fastapi.py
features/tetroweb-shared_kernel-infra-fastapi/tests/dtos/: test_pageable.py  test_response_base.py  test_response_pageable.py
features/tetroweb-shared_kernel-infra-fastapi/tests/exception_handlers/: test_base.py
features/tetroweb-shared_kernel-infra-fastapi/tests/middlewares/: test_correlation_id.py  test_session.py
features/tetroweb-shared_kernel-infra-fastapi/tests/utils/: test_responses.py  test_router.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/domain/: entity.py  exception.py  value_object.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/domain/enum/: __init__.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/domain/mixins/: timestamp_mixin.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/domain/types/: __init__.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/cache/: __init__.py  decorator.py  key_builders.py  utils.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/camel_model/: __init__.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/container/di/: __init__.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/database/: mixin.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/gateway/: __init__.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/gateway/http/: aio.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/mail/: service.py  templates.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/mail/html/email/: password_init_en.html
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/mq/: interface.py  types.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/mq/rebbitmq/asnyc/: __init__.py  connection.py  manager.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/object_storage/: s3.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/pg/: exceptions.py  interface.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/redis/: connection.py
features/tetroweb-shared_kernel/src/tetroweb/shared_kernel/infra/settings/: model.py
projects/tetroweb-backend/: .env  alembic.ini  pyproject.toml
projects/tetroweb-backend/data/: database.db
projects/tetroweb-backend/src/tetroweb/alembic/migrations/: env.py  script.py.mako  utils.py
projects/tetroweb-backend/src/tetroweb/alembic/migrations/versions/: 2025-05-27-1644-f7d9f3e6ac1a-init.py
projects/tetroweb-backend/src/tetroweb/backend/: container.py  lifespan.py  main.py  settings.py
projects/tetroweb-backend/src/tetroweb/backend/endpoint/rest/: fastapi.py
projects/tetroweb-backend/src/tetroweb/backend/leaderboard/: exceptions.py  use_case.py
projects/tetroweb-backend/src/tetroweb/backend/leaderboard/containers/: di.py
projects/tetroweb-backend/src/tetroweb/backend/leaderboard/dtos/: request.py  response.py  schemas.py
projects/tetroweb-backend/src/tetroweb/backend/leaderboard/entities/: __init__.py  leaderboard.py
projects/tetroweb-backend/src/tetroweb/backend/leaderboard/rest/: fastapi.py
projects/tetroweb-backend/test/: test_llm.py
projects/tetroweb-web/: next.config.ts  package.json  pnpm-lock.yaml
projects/tetroweb-web/src/app/: page.tsx
projects/tetroweb-web/src/app/dashboard/: Dashboard.module.css  page.tsx
projects/tetroweb-web/src/components/: Controls.module.css  Controls.tsx  GameOver.module.css  GameOver.tsx  Login.module.css  Login.tsx  NextBlock.module.css  NextBlock.tsx  Tetris.module.css  Tetris.tsx  TetrisBoard.module.css  TetrisBoard.tsx
projects/tetroweb-web/src/constants/: tetris.ts
projects/tetroweb-web/src/hooks/: useTetris.ts
projects/tetroweb-web/src/lib/api/: leaderboard.ts
projects/tetroweb-web/src/types/: tetris.ts
projects/tetroweb-web/src/utils/: dateUtils.ts  ranking.ts  tetrisUtils.ts
