[project]
name = "tetroweb-shared-kernel-infra-database-sqla"
version = "0.0.1"
description = "Shared kernel infra database sqla"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.41",
]


[tool.hatch.build.targets.wheel]
packages = ["src/tetroweb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "faker>=35.2.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-testmon>=2.1.3",
    "ruff",
]
